fix(tool): preserve registration order in MapToolRegistry
Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>